fix(sonar): remove commented passwords, Math.clamp, add contextLoads comment